--- a/styles/style.css
+++ b/styles/style.css
@@ -98,6 +98,7 @@ nav ul li a:hover {
 #servicos .cards .card {
   width: 360px;
   text-align: center;
+  align-self: center;
 }
 #servicos .cards .card h5 {
   font-size: calc(3rem / 1.7);
@@ -119,12 +120,16 @@ nav ul li a:hover {
 #servicos .cards .card .img-container img {
   max-width: 100%;
 }
+@media screen and (max-width: 430px) {
+  #servicos .cards .card {
+    width: 85vw;
+  }
+}
 @media screen and (max-width: 700px) {
   #servicos {
     padding: 50px 7vw 30px 7vw;
   }
   #servicos .cards {
-    display: inline-block;
     flex-direction: column;
   }
   #servicos .cards .card {
